--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.6.3",
+    "@skills/user-skills": "0.0.6",
     "animate.css": "3.7.0",
     "apexcharts": "^2.6.0",
     "axios": "0.18.0",
@@ -27,12 +28,12 @@
     "material-icons": "0.2.3",
     "moment": "2.22.2",
     "numeral": "2.0.6",
-    "@skills/user-skills": "0.0.6",
     "vee-validate": "2.1.0-beta.9",
     "vis": "^4.21.0",
     "vue": "2.5.17",
     "vue-2-crumbs": "0.5.4",
     "vue-apexcharts": "^1.2.8",
+    "vue-multiselect": "2.1.3",
     "vue-router": "3.0.1",
     "vue-select": "2.5.1",
     "vue-tables-2": "1.4.70",
