--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,31 +14,31 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.6.3",
+    "@fortawesome/fontawesome-free": "5.7.1",
     "@skills/user-skills": "0.0.6",
     "animate.css": "3.7.0",
-    "apexcharts": "^2.6.0",
+    "apexcharts": "3.2.1",
     "axios": "0.18.0",
     "babel-polyfill": "6.26.0",
-    "buefy": "0.6.7",
-    "bulma": "0.7.1",
+    "buefy": "0.7.2",
+    "bulma": "0.7.2",
     "font-awesome-picker": "2.0.0",
     "lodash.debounce": "4.0.8",
     "marked": "0.5.2",
     "material-icons": "0.2.3",
     "moment": "2.22.2",
     "numeral": "2.0.6",
-    "vee-validate": "2.1.0-beta.9",
-    "vis": "^4.21.0",
-    "vue": "2.5.17",
+    "vee-validate": "2.1.7",
+    "vis": "4.21.0",
+    "vue": "2.6.0",
     "vue-2-crumbs": "0.5.4",
-    "vue-apexcharts": "^1.2.8",
+    "vue-apexcharts": "1.2.9",
     "vue-multiselect": "2.1.3",
-    "vue-router": "3.0.1",
+    "vue-router": "3.0.2",
     "vue-select": "2.5.1",
     "vue-tables-2": "1.4.70",
     "vue-virtual-scroll-list": "1.2.8",
-    "vuex": "^3.1.0"
+    "vuex": "3.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -74,7 +74,7 @@
     "jest-serializer-vue": "^0.3.0",
     "nightwatch": "^0.9.12",
     "node-notifier": "^5.3.0",
-    "node-sass": "4.9.2",
+    "node-sass": "^4.11.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
     "portfinder": "^1.0.20",
@@ -92,7 +92,7 @@
     "vue-jest": "^1.0.2",
     "vue-loader": "^13.7.3",
     "vue-style-loader": "^3.1.2",
-    "vue-template-compiler": "2.5.17",
+    "vue-template-compiler": "^2.6.0",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.11.3",
