--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,9 +6,14 @@ build:
   image: maven:3.6.0-jdk-11
   stage: build
   script:
-    - echo "@skills:registry=http://10.113.80.244/repository/skills-registry/" > ~/.npmrc
+    - export NEXUS_SERVER="10.113.80.244"
+    - echo "@skills:registry=http://${NEXUS_SERVER}/repository/skills-registry/" > ~/.npmrc
     - cat ~/.npmrc
-    - mvn install
+    - mkdir ~/.m2
+    - echo "<settings><mirrors><mirror><id>central</id><name>central</name><url>http://${NEXUS_SERVER}/repository/maven-public/</url><mirrorOf>*</mirrorOf></mirror></mirrors></settings>" > ~/.m2/settings.xml
+    - cat ~/.m2/settings.xml
+    - cd backend
+    - mvn package
   artifacts:
     paths:
       - backend/target/backend-*.jar
