--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,7 +30,7 @@
     "numeral": "2.0.6",
     "vee-validate": "2.1.7",
     "vis": "4.21.0",
-    "vue": "2.6.0",
+    "vue": "2.6.2",
     "vue-2-crumbs": "0.5.4",
     "vue-apexcharts": "1.2.9",
     "vue-multiselect": "2.1.3",
@@ -92,7 +92,7 @@
     "vue-jest": "^1.0.2",
     "vue-loader": "^13.7.3",
     "vue-style-loader": "^3.1.2",
-    "vue-template-compiler": "^2.6.0",
+    "vue-template-compiler": "2.6.2",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.11.3",
