--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,6 @@
 stages:
   - build
-#  - deploy
+  - deploy
 
 build:
   image: maven:3.6.0-jdk-11
@@ -15,12 +15,12 @@ build:
     paths:
       - backend/target/backend-*.jar
 
-#deploy:
-#  image: alpine:latest
-#  stage: deploy
-#  before_script:
-#    - apk --update --no-cache add sshpass openssh
-#  script:
-#    - sshpass -p $CI_PASSWORD ssh -o StrictHostKeyChecking=no -o PreferredAuthentications=password -o PubkeyAuthentication=no $CI_USERNAME@$CI_IP "mkdir ~/test-worked"
-#  only:
-#    - master
+deploy:
+  image: alpine:latest
+  stage: deploy
+  before_script:
+    - apk --update --no-cache add sshpass openssh
+  script:
+    - sshpass -p $CI_PASSWORD ssh -o StrictHostKeyChecking=no -o PreferredAuthentications=password -o PubkeyAuthentication=no $CI_USERNAME@$CI_IP "mkdir -p ~/test-worked1"
+  only:
+    - master
