--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,19 +1,20 @@
 stages:
-  - build
+#  - build
   - deploy
 
-build:
-  image: maven:3.6.0-jdk-11
-  stage: build
-  script:
-    - echo "@skills:registry=http://$NEXUS_SERVER/repository/skills-registry/" > ~/.npmrc
-    - cat ~/.npmrc
-    - echo "<settings><mirrors><mirror><id>central</id><name>central</name><url>http://$NEXUS_SERVER/repository/maven-public/</url><mirrorOf>*</mirrorOf></mirror></mirrors></settings>" > ~/.m2/settings.xml
-    - cat ~/.m2/settings.xml
-    - mvn install
-  artifacts:
-    paths:
-      - backend/target/backend-*.jar
+#build:
+#  image: maven:3.6.0-jdk-11
+#  stage: build
+#  script:
+#    - echo "@skills:registry=http://$NEXUS_SERVER/repository/skills-registry/" > ~/.npmrc
+#    - cat ~/.npmrc
+#    - echo "<settings><mirrors><mirror><id>central</id><name>central</name><url>http://$NEXUS_SERVER/repository/maven-public/</url><mirrorOf>*</mirrorOf></mirror></mirrors></settings>" > ~/.m2/settings.xml
+#    - cat ~/.m2/settings.xml
+#    - mvn install
+#  artifacts:
+#    paths:
+#      - backend/target/backend-*.jar
+
 
 deploy:
   image: alpine:latest
@@ -21,6 +22,7 @@ deploy:
   before_script:
     - apk --update --no-cache add sshpass openssh
   script:
+    - git checkout git@gitlab.evoforge.org:skills/skills-test.git
     - sshpass -p $CI_PASSWORD ssh -o StrictHostKeyChecking=no -o PreferredAuthentications=password -o PubkeyAuthentication=no $CI_USERNAME@$CI_IP "mkdir -p ~/test-worked1"
   only:
     - master
