--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,11 +17,12 @@ stages:
 
 
 deploy:
-  image: alpine/git:latest
+  image: alpine:latest
   stage: deploy
   before_script:
-    - apk --update --no-cache add sshpass openssh
+    - apk --update --no-cache add sshpass openssh git
   script:
+#    - - apk --update --no-cache add git
     - git checkout git@gitlab.evoforge.org:skills/skills-test.git
     - sshpass -p $CI_PASSWORD ssh -o StrictHostKeyChecking=no -o PreferredAuthentications=password -o PubkeyAuthentication=no $CI_USERNAME@$CI_IP "mkdir -p ~/test-worked1"
   only:
