--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,8 +22,10 @@ deploy:
   before_script:
     - apk --update --no-cache add sshpass openssh git
   script:
-#    - - apk --update --no-cache add git
-    - git clone https://***REMOVED***/skills/skills-test.git
-    - sshpass -p $CI_PASSWORD ssh -o StrictHostKeyChecking=no -o PreferredAuthentications=password -o PubkeyAuthentication=no $CI_USERNAME@$CI_IP "mkdir -p ~/test-worked1"
+    - git clone https://${GITLAB_DEPLOY_USERNAME}:${GITLAB_DEPLOY_PASSWORD}@gitlab.evoforge.org/skills/skills-deploy.git
+    - TIMESTAMP=`date +%s`
+    - TMP_DIR="deploy_${TIMESTAMP}"
+    - sshpass -p $CI_PASSWORD ssh -o StrictHostKeyChecking=no -o PreferredAuthentications=password -o PubkeyAuthentication=no $CI_USERNAME@$CI_IP "mkdir -p ~/$TMP_DIR"
+    - sshpass -p $CI_PASSWORD scp -r -o StrictHostKeyChecking=no -o PreferredAuthentications=password -o PubkeyAuthentication=no $CI_USERNAME@$CI_IP skills-deploy ~/$TMP_DIR/
   only:
     - master
