--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -29,6 +29,11 @@
             <artifactId>commons-codec</artifactId>
             <version>1.11</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-text</artifactId>
+            <version>1.6</version>
+        </dependency>
 
         <!-- need to explicitly include jaxb deps when using jdk >= 9 -->
         <dependency>
