#21 initialize maven module for client-display

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>frontend</module>
         <module>backend</module>
+        <module>client-display</module>
     </modules>
     <properties>
         <nexusServer></nexusServer>
