#28 - set session timeout to 24 hours

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -6,6 +6,9 @@ server:
   error:
     whitelabel:
       enabled: false
+  servlet:
+    session:
+      timeout: 24h
 spring:
   main:
     allow-bean-definition-overriding: true
