--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "vue": "2.6.2",
     "vue-2-crumbs": "0.5.4",
     "vue-apexcharts": "1.2.9",
+    "vue-friendly-iframe": "^0.12.0",
     "vue-multiselect": "2.1.3",
     "vue-router": "3.0.2",
     "vue-tables-2": "1.4.70",
