#22 - enable bootstrapping the app when conditions aren't met

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -239,7 +239,6 @@
                         </goals>
                         <configuration>
                             <outputDirectory>${basedir}/src/main/resources/public</outputDirectory>
-                            <overwrite>true</overwrite>
                             <resources>
                                 <resource>
                                     <directory>${project.parent.basedir}/frontend/target/dist</directory>
@@ -251,7 +250,26 @@
                             </resources>
                         </configuration>
                     </execution>
-
+                    <execution>
+                        <id>copy Vue.js boostrap content</id>
+                        <phase>generate-resources</phase>
+                        <goals>
+                            <goal>copy-resources</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${basedir}/src/main/resources/public/bootstrap</outputDirectory>
+                            <overwrite>true</overwrite>
+                            <resources>
+                                <resource>
+                                    <directory>${project.parent.basedir}/skills-bootstrap/target/dist/bootstrap</directory>
+                                    <includes>
+                                        <include>static/</include>
+                                        <include>index.html</include>
+                                    </includes>
+                                </resource>
+                            </resources>
+                        </configuration>
+                    </execution>
                 </executions>
 
 
