--- a/client-display/package.json
+++ b/client-display/package.json
@@ -16,6 +16,7 @@
     "axios": "0.18.0",
     "bootstrap": "3.3.7",
     "chart.js": "2.7.2",
+    "lodash": "^4.17.11",
     "marked": "^0.6.0",
     "numeral": "2.0.6",
     "q": "1.5.1",
