--- a/client-display/package.json
+++ b/client-display/package.json
@@ -27,6 +27,7 @@
     "vue-js-toggle-button": "1.3.0",
     "vue-popperjs": "1.5.4",
     "vue-radial-progress": "0.2.10",
+    "vue-router": "3.0.2",
     "vue-simple-progress": "1.1.0",
     "vue-simple-spinner": "1.2.8",
     "vue-tiny-slider": "0.1.31"
