--- a/client-display/package.json
+++ b/client-display/package.json
@@ -16,20 +16,20 @@
     "axios": "0.18.0",
     "bootstrap": "3.3.7",
     "chart.js": "2.7.2",
-    "lodash": "^4.17.11",
-    "marked": "^0.6.0",
+    "lodash": "4.17.11",
+    "marked": "0.6.0",
     "numeral": "2.0.6",
     "q": "1.5.1",
-    "tiny-slider": "^2.9.1",
-    "tinycolor2": "^1.4.1",
-    "url-search-params-polyfill": "^5.0.0",
+    "tiny-slider": "2.9.1",
+    "tinycolor2": "1.4.1",
+    "url-search-params-polyfill": "5.0.0",
     "vue": "2.5.17",
     "vue-js-toggle-button": "1.3.0",
-    "vue-popperjs": "^1.5.4",
-    "vue-radial-progress": "^0.2.10",
+    "vue-popperjs": "1.5.4",
+    "vue-radial-progress": "0.2.10",
     "vue-simple-progress": "1.1.0",
     "vue-simple-spinner": "1.2.8",
-    "vue-tiny-slider": "^0.1.31"
+    "vue-tiny-slider": "0.1.31"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "3.5.1",
