--- a/client-display/package.json
+++ b/client-display/package.json
@@ -24,6 +24,7 @@
     "tinycolor2": "1.4.1",
     "url-search-params-polyfill": "5.0.0",
     "vue": "2.5.17",
+    "vis": "4.21.0",
     "vue-js-toggle-button": "1.3.0",
     "vue-popperjs": "1.5.4",
     "vue-radial-progress": "0.2.10",
