#26 fixing various vue cli 3 changes with regard to resource sub directories

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -242,11 +242,7 @@
                             <overwrite>true</overwrite>
                             <resources>
                                 <resource>
-                                    <directory>${project.parent.basedir}/frontend/target/dist</directory>
-                                    <includes>
-                                        <include>static/</include>
-                                        <include>index.html</include>
-                                    </includes>
+                                    <directory>${project.parent.basedir}/frontend/dist</directory>
                                 </resource>
                             </resources>
                         </configuration>
