--- a/client-display/package.json
+++ b/client-display/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "5.7.1",
+    "animate.css": "3.7.0",
     "axios": "0.18.0",
     "bootstrap": "3.3.7",
     "chart.js": "2.7.2",
@@ -23,8 +24,8 @@
     "tiny-slider": "2.9.1",
     "tinycolor2": "1.4.1",
     "url-search-params-polyfill": "5.0.0",
-    "vue": "2.5.17",
     "vis": "4.21.0",
+    "vue": "2.5.17",
     "vue-js-toggle-button": "1.3.0",
     "vue-popperjs": "1.5.4",
     "vue-radial-progress": "0.2.10",
