--- a/client-display/package.json
+++ b/client-display/package.json
@@ -26,6 +26,7 @@
     "url-search-params-polyfill": "5.0.0",
     "vis": "4.21.0",
     "vue": "2.5.17",
+    "vue-2-breadcrumbs": "^0.5.0",
     "vue-js-toggle-button": "1.3.0",
     "vue-popperjs": "1.5.4",
     "vue-radial-progress": "0.2.10",
