--- a/client-display/package.json
+++ b/client-display/package.json
@@ -26,12 +26,12 @@
     "url-search-params-polyfill": "5.0.0",
     "vis": "4.21.0",
     "vue": "2.5.17",
-    "vue-2-breadcrumbs": "^0.5.0",
+    "vue-2-breadcrumbs": "0.5.0",
     "vue-js-toggle-button": "1.3.0",
     "vue-popperjs": "1.5.4",
     "vue-radial-progress": "0.2.10",
     "vue-router": "3.0.2",
-    "vue-scrollto": "^2.15.0",
+    "vue-scrollto": "2.15.0",
     "vue-simple-progress": "1.1.0",
     "vue-simple-spinner": "1.2.8",
     "vue-tiny-slider": "0.1.31"
