--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -67,6 +67,10 @@
             <version>2.0.0.RELEASE</version>
             <!--<version>${springboot.version}</version>-->
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
