--- a/client-display/package.json
+++ b/client-display/package.json
@@ -15,8 +15,9 @@
     "@fortawesome/fontawesome-free": "5.7.1",
     "animate.css": "3.7.0",
     "axios": "0.18.0",
-    "bootstrap": "3.3.7",
+    "bootstrap": "4.3.1",
     "chart.js": "2.7.2",
+    "jquery": "^3.3.1",
     "lodash": "4.17.11",
     "marked": "0.6.0",
     "numeral": "2.0.6",
