--- a/client-display/package.json
+++ b/client-display/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "5.7.1",
     "animate.css": "3.7.0",
+    "apexcharts": "3.6.6",
     "axios": "0.18.0",
     "bootstrap": "4.3.1",
     "chart.js": "2.7.2",
