--- a/client-display/package.json
+++ b/client-display/package.json
@@ -18,7 +18,7 @@
     "axios": "0.18.0",
     "bootstrap": "4.3.1",
     "chart.js": "2.7.2",
-    "jquery": "^3.3.1",
+    "jquery": "3.3.1",
     "lodash": "4.17.11",
     "marked": "0.6.0",
     "numeral": "2.0.6",
@@ -29,6 +29,7 @@
     "vis": "4.21.0",
     "vue": "2.5.17",
     "vue-2-breadcrumbs": "0.5.0",
+    "vue-apexcharts": "1.3.4",
     "vue-js-toggle-button": "1.3.0",
     "vue-popperjs": "1.5.4",
     "vue-radial-progress": "0.2.10",
