--- a/client-display/package.json
+++ b/client-display/package.json
@@ -30,6 +30,7 @@
     "vue-2-breadcrumbs": "0.5.0",
     "vue-apexcharts": "1.3.4",
     "vue-js-toggle-button": "1.3.0",
+    "vue-moment": "^4.0.0",
     "vue-popperjs": "1.5.4",
     "vue-radial-progress": "0.2.10",
     "vue-router": "3.0.2",
