--- a/client-display/package.json
+++ b/client-display/package.json
@@ -12,46 +12,46 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "5.7.1",
+    "@fortawesome/fontawesome-free": "5.8.1",
     "animate.css": "3.7.0",
-    "apexcharts": "3.6.6",
+    "apexcharts": "3.6.7",
     "axios": "0.18.0",
     "bootstrap": "4.3.1",
-    "jquery": "3.3.1",
+    "jquery": "3.4.0",
     "lodash": "4.17.11",
-    "marked": "0.6.0",
+    "marked": "0.6.2",
     "numeral": "2.0.6",
     "q": "1.5.1",
-    "tiny-slider": "2.9.1",
+    "tiny-slider": "2.9.2",
     "tinycolor2": "1.4.1",
-    "url-search-params-polyfill": "5.0.0",
+    "url-search-params-polyfill": "5.1.0",
     "vis": "4.21.0",
-    "vue": "2.5.17",
+    "vue": "2.6.10",
     "vue-2-breadcrumbs": "0.5.0",
     "vue-apexcharts": "1.3.4",
-    "vue-js-toggle-button": "1.3.0",
-    "vue-moment": "^4.0.0",
-    "vue-popperjs": "1.5.4",
+    "vue-js-toggle-button": "1.3.2",
+    "vue-moment": "4.0.0",
+    "vue-popperjs": "2.0.3",
     "vue-radial-progress": "0.2.10",
-    "vue-router": "3.0.2",
+    "vue-router": "3.0.6",
     "vue-scrollto": "2.15.0",
     "vue-simple-progress": "1.1.0",
     "vue-simple-spinner": "1.2.8",
-    "vue-tiny-slider": "0.1.31"
+    "vue-tiny-slider": "0.1.35"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "3.5.1",
-    "@vue/cli-plugin-eslint": "3.5.1",
-    "@vue/cli-plugin-unit-jest": "3.5.1",
-    "@vue/cli-service": "3.5.1",
-    "@vue/eslint-config-airbnb": "3.0.5",
-    "@vue/test-utils": "1.0.0-beta.20",
-    "axios-mock-adapter": "1.15.0",
+    "@vue/cli-plugin-babel": "3.6.0",
+    "@vue/cli-plugin-eslint": "3.6.0",
+    "@vue/cli-plugin-unit-jest": "3.6.3",
+    "@vue/cli-service": "3.6.0",
+    "@vue/eslint-config-airbnb": "4.0.0",
+    "@vue/test-utils": "1.0.0-beta.29",
+    "axios-mock-adapter": "1.16.0",
     "babel-core": "7.0.0-bridge.0",
-    "babel-jest": "23.0.1",
+    "babel-jest": "24.7.1",
     "node-sass": "4.11.0",
-    "sass-loader": "7.0.1",
-    "vue-template-compiler": "2.5.17"
+    "sass-loader": "7.1.0",
+    "vue-template-compiler": "2.6.10"
   },
   "peerDependencies": {
     "font-awesome": "4.7.0"
