#67: fixing build isue where resources for client display are not being packaged in the backend jar

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -264,8 +264,7 @@
                                 <resource>
                                     <directory>${project.parent.basedir}/client-display/dist</directory>
                                     <includes>
-                                        <include>static/</include>
-                                        <include>index.html</include>
+                                        <include>/*/</include>
                                     </includes>
                                 </resource>
                             </resources>
