--- a/client-display/package.json
+++ b/client-display/package.json
@@ -17,27 +17,22 @@
     "apexcharts": "3.6.7",
     "axios": "0.18.0",
     "bootstrap": "4.3.1",
-    "jquery": "3.4.0",
     "lodash": "4.17.11",
     "marked": "0.6.2",
     "numeral": "2.0.6",
     "q": "1.5.1",
-    "tiny-slider": "2.9.2",
     "tinycolor2": "1.4.1",
     "url-search-params-polyfill": "5.1.0",
     "vis": "4.21.0",
     "vue": "2.6.10",
-    "vue-2-breadcrumbs": "0.5.0",
     "vue-apexcharts": "1.3.4",
     "vue-js-toggle-button": "1.3.2",
     "vue-moment": "4.0.0",
-    "vue-popperjs": "2.0.3",
     "vue-radial-progress": "0.2.10",
     "vue-router": "3.0.6",
     "vue-scrollto": "2.15.0",
     "vue-simple-progress": "1.1.0",
-    "vue-simple-spinner": "1.2.8",
-    "vue-tiny-slider": "0.1.35"
+    "vue-simple-spinner": "1.2.8"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "3.6.0",
