--- a/client-display/package.json
+++ b/client-display/package.json
@@ -31,6 +31,7 @@
     "vue-radial-progress": "0.2.10",
     "vue-router": "3.0.6",
     "vue-simple-progress": "1.1.0",
+    "vue-simple-spinner": "1.2.8",
     "vuex": "3.1.0"
   },
   "devDependencies": {
