#87 make number of icons per for responsive to layout

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,9 +18,11 @@
     "babel-polyfill": "6.26.0",
     "bootstrap": "4.3.1",
     "bootstrap-vue": "2.0.0-rc.19",
+    "enquire.js": "2.1.6",
     "font-awesome-picker": "2.0.0",
     "lodash.debounce": "4.0.8",
     "marked": "0.5.2",
+    "matchmedia-polyfill": "0.3.1",
     "material-icons": "0.2.3",
     "moment": "2.22.2",
     "numeral": "2.0.6",
