--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,35 +26,36 @@
     "material-icons": "0.3.1",
     "moment": "2.24.0",
     "numeral": "2.0.6",
+    "postmate": "1.5.0",
     "vee-validate": "2.2.7",
     "vis": "4.21.0",
-    "vue": "^2.6.10",
+    "vue": "2.6.10",
     "vue-2-crumbs": "0.5.4",
     "vue-apexcharts": "1.3.5",
-    "vue-friendly-iframe": "^0.12.0",
+    "vue-friendly-iframe": "0.12.0",
     "vue-multiselect": "2.1.6",
     "vue-router": "3.0.6",
-    "vue-scrollto": "^2.15.0",
+    "vue-scrollto": "2.15.0",
     "vue-tables-2": "1.4.70",
     "vue-virtual-scroll-list": "1.3.7",
-    "vuex": "^3.1.1",
-    "vuejs-datepicker": "1.5.4"
+    "vuejs-datepicker": "1.5.4",
+    "vuex": "3.1.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.7.0",
-    "@vue/cli-plugin-e2e-nightwatch": "^3.7.0",
-    "@vue/cli-plugin-eslint": "^3.7.0",
-    "@vue/cli-plugin-unit-jest": "^3.7.0",
-    "@vue/cli-service": "^3.7.0",
-    "@vue/eslint-config-airbnb": "^4.0.0",
+    "@vue/cli-plugin-babel": "3.7.0",
+    "@vue/cli-plugin-e2e-nightwatch": "3.7.0",
+    "@vue/cli-plugin-eslint": "3.7.0",
+    "@vue/cli-plugin-unit-jest": "3.7.0",
+    "@vue/cli-service": "3.7.0",
+    "@vue/eslint-config-airbnb": "4.0.0",
     "@vue/test-utils": "1.0.0-beta.29",
     "babel-core": "7.0.0-bridge.0",
-    "babel-eslint": "^10.0.1",
-    "babel-jest": "^24.8.0",
-    "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.2.2",
-    "node-sass": "^4.12.0",
-    "sass-loader": "^7.1.0",
-    "vue-template-compiler": "^2.6.10"
+    "babel-eslint": "10.0.1",
+    "babel-jest": "24.8.0",
+    "eslint": "5.16.0",
+    "eslint-plugin-vue": "5.2.2",
+    "node-sass": "4.12.0",
+    "sass-loader": "7.1.0",
+    "vue-template-compiler": "2.6.10"
   }
 }
