--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,6 @@
 stages:
   - build
-#  - deploy
+  - deploy
 
 build:
   image: maven:3.6.0-jdk-11
@@ -16,20 +16,20 @@ build:
       - backend/target/backend-*.jar
 
 
-#deploy:
-#  image: alpine:latest
-#  stage: deploy
-#  before_script:
-#    - apk --update --no-cache add sshpass openssh git
-#  script:
-#    - git clone https://${GITLAB_DEPLOY_USERNAME}:${GITLAB_DEPLOY_PASSWORD}@gitlab.evoforge.org/skills/skills-deploy.git
-#    - TIMESTAMP=`date +%s`
-#    - TMP_DIR="deploy_${TIMESTAMP}"
-#    - DEST_PATH="/home/${CI_USERNAME}/$TMP_DIR"
-#    - sshpass -p $CI_PASSWORD ssh -o StrictHostKeyChecking=no -o PreferredAuthentications=password -o PubkeyAuthentication=no $CI_USERNAME@$CI_IP "rm -rf /home/${CI_USERNAME}/deploy_* && mkdir -p ${DEST_PATH}"
-#    - cp backend/target/backend-*.jar backend.jar
-#    - sshpass -p $CI_PASSWORD scp -r skills-deploy ${CI_USERNAME}@${CI_IP}:${DEST_PATH}
-#    - sshpass -p $CI_PASSWORD scp -r backend.jar ${CI_USERNAME}@${CI_IP}:${DEST_PATH}/skills-deploy
-#    - sshpass -p $CI_PASSWORD ssh -o StrictHostKeyChecking=no -o PreferredAuthentications=password -o PubkeyAuthentication=no $CI_USERNAME@$CI_IP "cd ${DEST_PATH}/skills-deploy && ./runDeploy.sh"
-#  only:
-#    - master
+deploy:
+  image: alpine:latest
+  stage: deploy
+  before_script:
+    - apk --update --no-cache add sshpass openssh git
+  script:
+    - git clone https://${GITLAB_DEPLOY_USERNAME}:${GITLAB_DEPLOY_PASSWORD}@gitlab.evoforge.org/skills/skills-deploy.git
+    - TIMESTAMP=`date +%s`
+    - TMP_DIR="deploy_${TIMESTAMP}"
+    - DEST_PATH="/home/${CI_USERNAME}/$TMP_DIR"
+    - sshpass -p $CI_PASSWORD ssh -o StrictHostKeyChecking=no -o PreferredAuthentications=password -o PubkeyAuthentication=no $CI_USERNAME@$CI_IP "rm -rf /home/${CI_USERNAME}/deploy_* && mkdir -p ${DEST_PATH}"
+    - cp backend/target/backend-*.jar backend.jar
+    - sshpass -p $CI_PASSWORD scp -r skills-deploy ${CI_USERNAME}@${CI_IP}:${DEST_PATH}
+    - sshpass -p $CI_PASSWORD scp -r backend.jar ${CI_USERNAME}@${CI_IP}:${DEST_PATH}/skills-deploy
+    - sshpass -p $CI_PASSWORD ssh -o StrictHostKeyChecking=no -o PreferredAuthentications=password -o PubkeyAuthentication=no $CI_USERNAME@$CI_IP "cd ${DEST_PATH}/skills-deploy && ./runDeploy.sh"
+  only:
+    - master
