--- a/skills-bootstrap/package.json
+++ b/skills-bootstrap/package.json
@@ -1,108 +1,58 @@
 {
-  "name": "frontend",
-  "version": "1.0.0",
-  "description": "User Skills Management Portal",
-  "author": "User Skills Team",
+  "name": "skills-bootstrap-cli3",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "webpack-dev-server --host 0.0.0.0 --inline --progress --config build/webpack.dev.conf.js",
-    "start": "npm run dev",
-    "unit": "jest --config test/unit/jest.conf.js --coverage",
-    "e2e": "node test/e2e/runner.js",
-    "test": "npm run unit && npm run e2e",
-    "lint": "eslint --ext .js,.vue src test/unit test/e2e/specs",
-    "build": "node build/build.js"
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "5.8.2",
-    "animate.css": "3.7.0",
-    "apexcharts": "3.6.11",
-    "axios": "0.18.0",
-    "babel-polyfill": "6.26.0",
-    "buefy": "0.7.5",
-    "bulma": "0.7.4",
-    "font-awesome-picker": "2.0.0",
-    "lodash.debounce": "4.0.8",
-    "marked": "0.6.2",
-    "material-icons": "0.3.1",
-    "moment": "2.24.0",
-    "numeral": "2.0.6",
-    "vee-validate": "2.2.7",
-    "vis": "4.21.0",
-    "vue": "2.6.10",
-    "vue-2-crumbs": "0.5.4",
-    "vue-apexcharts": "1.3.5",
-    "vue-multiselect": "2.1.6",
-    "vue-router": "3.0.6",
-    "vue-tables-2": "1.4.70",
-    "vue-virtual-scroll-list": "1.3.8",
-    "vuex": "3.1.1"
+    "@fortawesome/fontawesome-free": "^5.8.2",
+    "animate.css": "^3.7.0",
+    "axios": "^0.18.0",
+    "bootstrap": "4.3.1",
+    "bootstrap-vue": "2.0.0-rc.19",
+    "core-js": "^2.6.5",
+    "css-loader": "^2.1.1",
+    "material-icons": "^0.3.1",
+    "vee-validate": "^2.2.7",
+    "vue": "^2.6.10",
+    "vue-loader": "^15.7.0"
   },
   "devDependencies": {
-    "autoprefixer": "^9.5.1",
-    "babel-core": "^6.26.3",
+    "@vue/cli-plugin-babel": "^3.7.0",
+    "@vue/cli-plugin-eslint": "^3.7.0",
+    "@vue/cli-service": "^3.7.0",
     "babel-eslint": "^10.0.1",
-    "babel-helper-vue-jsx-merge-props": "^2.0.3",
-    "babel-jest": "^24.8.0",
-    "babel-loader": "^8.0.6",
-    "babel-plugin-dynamic-import-node": "^2.2.0",
-    "babel-plugin-syntax-jsx": "^6.18.0",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-plugin-transform-vue-jsx": "^3.7.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-stage-2": "^6.24.1",
-    "babel-register": "^6.26.0",
-    "chalk": "^2.4.2",
-    "copy-webpack-plugin": "^5.0.3",
-    "cross-spawn": "^6.0.5",
-    "css-loader": "^2.1.1",
     "eslint": "^5.16.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-friendly-formatter": "^4.0.1",
-    "eslint-import-resolver-webpack": "^0.11.1",
-    "eslint-loader": "^2.1.2",
-    "eslint-plugin-import": "^2.17.2",
-    "eslint-plugin-vue": "^5.2.2",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^3.0.1",
-    "friendly-errors-webpack-plugin": "^1.7.0",
-    "html-webpack-plugin": "^3.2.0",
-    "jest": "^24.8.0",
-    "jest-serializer-vue": "^2.0.2",
-    "nightwatch": "^1.0.19",
-    "node-notifier": "^5.4.0",
+    "eslint-plugin-vue": "^5.0.0",
     "node-sass": "^4.12.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.1",
-    "ora": "^3.4.0",
-    "portfinder": "^1.0.20",
-    "postcss-import": "^12.0.1",
-    "postcss-loader": "^3.0.0",
-    "postcss-url": "^8.0.0",
-    "rimraf": "^2.6.3",
     "sass-loader": "^7.1.0",
-    "selenium-server": "^3.141.59",
-    "semver": "^6.0.0",
-    "shelljs": "^0.8.3",
-    "style-loader": "^0.23.1",
-    "uglifyjs-webpack-plugin": "^2.1.3",
-    "url-loader": "^1.1.2",
-    "vue-jest": "^3.0.4",
-    "vue-loader": "^15.7.0",
-    "vue-style-loader": "^4.1.2",
-    "vue-template-compiler": "2.6.10",
-    "webpack": "^4.31.0",
-    "webpack-bundle-analyzer": "^3.3.2",
-    "webpack-dev-server": "^3.4.0",
-    "webpack-merge": "^4.2.1"
+    "vue-template-compiler": "^2.6.10",
+    "webpack": "^4.31.0"
   },
-  "engines": {
-    "node": ">= 6.0.0",
-    "npm": ">= 3.0.0"
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
+    },
+    "extends": [
+      "plugin:vue/essential",
+      "eslint:recommended"
+    ],
+    "rules": {},
+    "parserOptions": {
+      "parser": "babel-eslint"
+    }
+  },
+  "postcss": {
+    "plugins": {
+      "autoprefixer": {}
+    }
   },
   "browserslist": [
     "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
+    "last 2 versions"
   ]
 }
