--- a/skills-bootstrap/package.json
+++ b/skills-bootstrap/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "deploy": "npm run build && rm -rf ../backend/src/main/resources/public/bootstrap && rm -rf ../backend/target/classes/public/bootstrap && cp -rT dist ../backend/src/main/resources/public/bootstrap/ && cp -rT dist ../backend/target/classes/public/bootstrap"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.8.2",
