#136: Integration of Inception project - WIP

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -287,8 +287,7 @@
                                 <resource>
                                     <directory>${project.parent.basedir}/skills-bootstrap/dist/</directory>
                                     <includes>
-                                        <include>static/</include>
-                                        <include>index.html</include>
+                                        <include>/*/</include>
                                     </includes>
                                 </resource>
                             </resources>
