--- a/client-display/package.json
+++ b/client-display/package.json
@@ -18,6 +18,7 @@
     "axios": "0.18.0",
     "axios-auth-refresh": "1.0.6",
     "bootstrap": "4.3.1",
+    "material-icons": "0.3.1",
     "lodash": "4.17.11",
     "marked": "0.6.2",
     "numeral": "2.0.6",
