--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -123,6 +123,7 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.16</version>
         </dependency>
         <dependency>
             <groupId>org.flywaydb</groupId>
