#148 - postgresql is not operational and all of the integration tests pass

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -16,6 +16,8 @@ spring:
     hibernate:
       ddl-auto: validate
 #    show-sql: true
+  liquibase:
+    "change-log": "classpath:db/changelog/db.changelog-master.xml"
 
   security:
     oauth2:
