--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -14,7 +14,7 @@ spring:
     allow-bean-definition-overriding: true
   jpa:
     hibernate:
-      ddl-auto: validate
+      ddl-auto: none
 #    show-sql: true
   liquibase:
     "change-log": "classpath:db/changelog/db.changelog-master.xml"
