#174 disable contextual LOB creation, which causes error message during start up when using postgres

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -13,6 +13,11 @@ spring:
   main:
     allow-bean-definition-overriding: true
   jpa:
+    properties:
+      hibernate:
+        jdbc:
+          lob:
+            non_contextual_creation: true
     hibernate:
       ddl-auto: none
 #    show-sql: true
