--- a/frontend/pom.xml
+++ b/frontend/pom.xml
@@ -14,7 +14,6 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <java.version>1.8</java.version>
     <frontend-maven-plugin.version>1.6</frontend-maven-plugin.version>
   </properties>
 
@@ -24,7 +23,7 @@
       <plugin>
         <groupId>com.github.eirslett</groupId>
         <artifactId>frontend-maven-plugin</artifactId>
-        <version>1.6</version>
+        <version>${frontend-maven-plugin.version}</version>
         <configuration>
           <installDirectory>target</installDirectory>
         </configuration>
@@ -35,8 +34,7 @@
               <goal>install-node-and-npm</goal>
             </goals>
             <configuration>
-              <nodeVersion>v11.6.0</nodeVersion>
-             <!--<npmVersion>3.10.10</npmVersion>-->
+              <nodeVersion>${node.version}</nodeVersion>
             </configuration>
           </execution>
           <execution>
