#139 unifying UserProperties into Settings, storing project sort order as a per-user Setting instead of globally on the project_definition table

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -171,7 +171,7 @@
         <dependency>
             <groupId>profile</groupId>
             <artifactId>call-stack-profiler</artifactId>
-            <version>1.0.0</version>
+            <version>1.0.1-SNAPSHOT</version>
         </dependency>
 
     </dependencies>
