#213 add server side configs that can be communicated back to the UI, added config for max description length, synchronize between backend and frontend

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -38,7 +38,10 @@ spring:
             client-secret: ***REMOVED***
             redirectUriTemplate: 'http://localhost:8080/{action}/oauth2/code/{registrationId}'
             iconClass: fab fa-github
-
+skills:
+  config:
+    ui:
+      descriptionMaxLength: 2000
   profiles:
     active: default
 #logging:
