#212 change time window validator to use backend config property, validate both hours and minutes together

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -42,6 +42,7 @@ skills:
   config:
     ui:
       descriptionMaxLength: 2000
+      maxTimeWindowInMinutes: 43200
   profiles:
     active: default
 #logging:
