#222: move test to skills-service project

--- a/pom.xml
+++ b/pom.xml
@@ -20,14 +20,14 @@
         <java.version>1.11</java.version>
 
         <!-- can NOT name it groovy.version as spock's dependency picks it up-->
-        <groovy.version>2.5.5</groovy.version>
+        <groovy.version>2.5.7</groovy.version>
         <groovy.eclipse.compiler.version>3.0.0-01</groovy.eclipse.compiler.version>
         <groovy.eclipse.batch.version>2.5.1-02</groovy.eclipse.batch.version>
 
-        <spock.myVersion>1.1-groovy-2.4-rc-4</spock.myVersion>
+        <spock.myVersion>1.3-groovy-2.5</spock.myVersion>
         <java.version>1.8</java.version>
         <!-- when changing the springboot.version property, make sure you also change it in the parent definition -->
-        <springboot.version>2.1.2.RELEASE</springboot.version>
+        <springboot.version>2.1.6.RELEASE</springboot.version>
 
         <flywaydb.version>5.2.1</flywaydb.version>
 
@@ -37,6 +37,8 @@
 
         <frontend-maven-plugin.version>1.7.6</frontend-maven-plugin.version>
         <node.version>v11.6.0</node.version>
+
+        <httpclient.version>4.5.6</httpclient.version>
     </properties>
 
     <parent>
