#231: fixed visualization of deps that was broken by removal of ids

--- a/backend/src/test/resources/application.properties
+++ b/backend/src/test/resources/application.properties
@@ -1,2 +1,2 @@
-#logging.level.skills.intTests.utils.WSHelper=warn
+logging.level.skills.intTests.utils.WSHelper=warn
 logging.level.org.apache.http.client.protocol.ResponseProcessCookies=fatal
