--- a/backend/src/test/resources/application.properties
+++ b/backend/src/test/resources/application.properties
@@ -1,2 +1,6 @@
 logging.level.skills.intTests.utils.WSHelper=warn
 logging.level.org.apache.http.client.protocol.ResponseProcessCookies=fatal
+skills.config.ui.paragraphValidationRegex=^(?i)(?s)((?!jabberwocky).)*$
+skills.config.ui.paragraphValidationMessage=paragraphs may not contain jabberwocky
+skills.config.ui.nameValidationRegex=^(?i)((?!jabberwocky).)*$
+skills.config.ui.nameValidationMessage=names may  not contain jabberwocky
