#252 added DOMPurify dependency to package.json, sanitized user entered text fields on dashboard

--- a/client-display/package.json
+++ b/client-display/package.json
@@ -36,7 +36,8 @@
     "vue-router": "3.0.6",
     "vue-simple-progress": "1.1.0",
     "vue-simple-spinner": "1.2.8",
-    "vuex": "3.1.1"
+    "vuex": "3.1.1",
+    "dompurify": "2.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "3.7.0",
