--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,7 +39,8 @@
     "vue-tables-2": "1.4.70",
     "vue-virtual-scroll-list": "1.3.7",
     "vuejs-datepicker": "1.5.4",
-    "vuex": "3.1.1"
+    "vuex": "3.1.1",
+    "dompurify": "2.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "3.7.0",
