#294 prevent other jobs from running in pipeline for scheduled postgres test run

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,6 +3,9 @@ stages:
   - deploy
 
 build:
+  except:
+    variables:
+      - $TYPE == "postgrestest"
   image: maven:3.6.0-jdk-11
   stage: build
   script:
@@ -34,6 +37,9 @@ postgres-test:on-schedule:
     - mvn test -Dspring.datasource.url=jdbc:postgresql://postgres:5432/skills -Dspring.datasource.username=postgres -Dspring.datasource.password=skillsPassword
 
 deploy:
+  except:
+    variables:
+      - $TYPE == "postgrestest"
   image: alpine:latest
   stage: deploy
   before_script:
