--- a/backend/src/test/resources/application.properties
+++ b/backend/src/test/resources/application.properties
@@ -7,9 +7,9 @@ skills.config.ui.nameValidationMessage=names may  not contain jabberwocky
 
 
 # Uncomment to run against local instance of Postgres
-#spring.datasource.url=jdbc:postgresql://localhost:5432/skills
-#spring.datasource.username=postgres
-#spring.datasource.password=skillspass
+spring.datasource.url=jdbc:postgresql://localhost:5432/skills
+spring.datasource.username=postgres
+spring.datasource.password=skillsPass
 
 # Uncomment to show SQL
 #spring.jpa.show-sql=true
