#351: Add ability to auto load setting from properties by using the following naming convention

--- a/backend/src/test/resources/application.properties
+++ b/backend/src/test/resources/application.properties
@@ -5,6 +5,9 @@ skills.config.ui.paragraphValidationMessage=paragraphs may not contain jabberwoc
 skills.config.ui.nameValidationRegex=^(?i)((?!jabberwocky).)*$
 skills.config.ui.nameValidationMessage=names may  not contain jabberwocky
 
+skills.store.settings.public_groupName1.settingId1=valuea
+skills.store.settings.public_groupName1.settingId2=valueb
+skills.store.settings.public_groupName2.settingId3=valuec
 
 # Uncomment to run against local instance of Postgres
 #spring.datasource.url=jdbc:postgresql://localhost:5432/skills
