#346: improve user representation in pki mode

--- a/backend/src/test/resources/application.properties
+++ b/backend/src/test/resources/application.properties
@@ -10,12 +10,12 @@ skills.store.settings.public_groupName1.settingId2=valueb
 skills.store.settings.public_groupName2.settingId3=valuec
 
 # Uncomment to run against local instance of Postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/skills
-spring.datasource.username=postgres
-spring.datasource.password=skillspass
+#spring.datasource.url=jdbc:postgresql://localhost:5432/skills
+#spring.datasource.username=postgres
+#spring.datasource.password=skillspass
 
 # Uncomment to show SQL
-spring.jpa.show-sql=true
-logging.level.org.hibernate: INFO
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder: TRACE
+#spring.jpa.show-sql=true
+#logging.level.org.hibernate: INFO
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder: TRACE
 
