#374 - disabled persistent sessions

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -9,6 +9,7 @@ server:
   servlet:
     session:
       timeout: 24h
+      persistent: false
 spring:
   main:
     allow-bean-definition-overriding: true
