#370 added additional test cases, rewrote update logic to update both totals and daily history

--- a/backend/src/test/resources/application.properties
+++ b/backend/src/test/resources/application.properties
@@ -10,9 +10,9 @@ skills.store.settings.public_groupName1.settingId2=valueb
 skills.store.settings.public_groupName2.settingId3=valuec
 
 # Uncomment to run against local instance of Postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/skills
-spring.datasource.username=postgres
-spring.datasource.password=skillsPass
+#spring.datasource.url=jdbc:postgresql://localhost:5432/skills
+#spring.datasource.username=postgres
+#spring.datasource.password=skillspass
 
 # Uncomment to show SQL
 #spring.jpa.show-sql=true
