#350: skills-service is going to be redeployed often - make sure JS changes are discovered and refreshed - WIP - dashboard support so far

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -42,6 +42,7 @@ spring:
 skills:
   artificialDelay:
     enabled: false
+  clientLibVersion: @maven.build.timestamp@
   config:
     ui:
       descriptionMaxLength: 2000
